<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_photos">

    <fragment
        android:id="@+id/navigation_photos"
        android:name="com.example.smproject.ui.Photos.PhotosFragment"
        android:label="@string/title_photos"
        tools:layout="@layout/fragment_photos" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_facts"
            app:destination="@id/navigation_facts" />
    </fragment>

    <fragment
        android:id="@+id/navigation_facts"
        android:name="com.example.smproject.ui.Facts.FactsFragment"
        android:label="@string/title_facts"
        tools:layout="@layout/fragment_facts" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.smproject.ui.Settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>