<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@raw/cats"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/buttonphotolist3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/button21_photos"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonphotozdejcie3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/button2_photos"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">
            <Button
                android:id="@+id/buttonphotolist11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary2"
                android:text="@string/button2_photos"
                android:textColor="@color/colorText2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonphotocat11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary2"
                android:text="@string/button3_photos"
                android:textColor="@color/colorText2"
                android:textSize="18sp" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">
                <Button
                    android:id="@+id/buttonphotolist113"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary2"
                    android:text="@string/button2_photos"
                    android:textColor="@color/colorText2"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/buttonphotocat113"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary2"
                    android:text="@string/button3_photos"
                    android:textColor="@color/colorText2"
                    android:textSize="18sp" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">
                <Button
                    android:id="@+id/buttonphotolist112"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary2"
                    android:text="@string/button2_photos"
                    android:textColor="@color/colorText2"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/buttonphotocat112"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary2"
                    android:text="@string/button3_photos"
                    android:textColor="@color/colorText2"
                    android:textSize="18sp" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/buttonphotolist111"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary2"
                    android:text="@string/button2_photos"
                    android:textColor="@color/colorText2"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/buttonphotocat111"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary2"
                    android:text="@string/button3_photos"
                    android:textColor="@color/colorText2"
                    android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>